# to-do-bot

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  go.mod
.github/workflows/: ci.yml  codeql.yml  deploy.yml
app/cmd/bot/: main.go
app/cpp-backend/: main.cpp
app/cpp-backend/include/: models.h
app/cpp-backend/src/: handlers.cpp
app/cpp-backend/tests/: database_test.cpp  model_test.cpp
app/internal/bot/: bot.go  bot_test.go  client.go  client_test.go  format.go  format_test.go  handlers.go  keyboards.go  keyboards_test.go  models.go  state.go  state_test.go
app/internal/config/: config.go  config_test.go
cmd/bot/: main.go
cpp-backend/: CMakeLists.txt  Dockerfile
cpp-backend/include/: database.h  handlers.h
cpp-backend/src/: database.cpp
cpp-backend/tests/: CMakeLists.txt  database_test.cpp  handler_test.cpp
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md
internal/bot/: bot.go  bot_test.go  client.go  client_test.go  handlers.go  handlers_test.go  models.go
internal/config/: config.go  config_test.go
